@startuml

' Historical note:
' This diagram describes an earlier architecture snapshot
' Current verification flow uses VerificationPlan, FileVerifier and HashService
' See docs/examples/verification-flow.md and docs/contracts/file-verifier.md

class LaunchContext

class LauncherConfiguration
class Manifest
class VerificationReport
class DownloadReport

LaunchContext --> LauncherConfiguration
LaunchContext --> Manifest
LaunchContext --> VerificationReport
LaunchContext --> DownloadReport

note right of LaunchContext
Не владеет объектами
Только передает их
между LauncherTask
end note

@enduml
